New DGM World Repo Update
Added about page

--- a/Portal.html
+++ b/Portal.html
@@ -79,8 +79,8 @@ img{
         </div>
 
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#about">About</a>
+            <a class="active" href="Portal.html">Home</a>
+            <a href="about.html">About</a>
             <a href="#contact">Contact</a>
             <input type="text" placeholder="Search..">
         </div>
@@ -190,7 +190,7 @@ a:active {
                         </li>
                     </ul>
                 </td>
-        <td>
+        <td width="60%">
             <h4>
                 <li>
                     Vocal training and Pitch Mastering
@@ -329,6 +329,16 @@ div.desc {
     </tr>
 
 </table>
+<table width="100%">
+<tr>
+  <th colspan="2">
+      <div style="padding: 5px; color: white; background-color: rgb(20, 8, 2);">
+      DGM Musik Academy &copy;2024
+  </div>
+  </th>
+</tr>
+</table>
+
 
 
 
