DGM World Repo Update

--- a/Portal.html
+++ b/Portal.html
@@ -8,6 +8,10 @@
         body {
             background-color: rgb(133, 53, 7);
         }
+
+        .centered {
+          text-shadow: 3px 3px 0px black;
+        }
     /* Container holding the image and the text */
 .container {
   position: relative;
