--- a/about.html
+++ b/about.html
@@ -10,6 +10,10 @@
             background-color: rgb(133, 53, 7);
         }
 
+        .centered {
+          text-shadow: 3px 3px 0px black;
+        }
+
           /* Container holding the image and the text */
 .container {
   position: relative;
@@ -468,7 +472,15 @@ hr {
 
 <button class="btn">20% Discount for Summer Classes <span class="ribbon">HOT</span></button>
 
-
+<table width="100%">
+  <tr>
+    <th colspan="2">
+        <div style="padding: 5px; color: white; background-color: rgb(20, 8, 2);">
+        DGM Musik Academy &copy;2024
+    </div>
+    </th>
+</tr>
+</table>
 
 
 
