DGM World contact Update
Added contact page and made modifications to about and portal pages

--- a/Portal.html
+++ b/Portal.html
@@ -10,14 +10,15 @@
         }
 
         .centered {
-          text-shadow: 3px 3px 0px black;
+          text-shadow: 3px 3px 0px white;
         }
     /* Container holding the image and the text */
 .container {
   position: relative;
   text-align: center;
-  color: white;
+  color: black;
   height: 200px;
+  
 }
 
 /* Bottom left text */
@@ -60,6 +61,7 @@ img{
     width: 100px;
     height: 100px;
     color: antiquewhite;
+    
 }
     
     </style>
@@ -85,7 +87,7 @@ img{
         <div class="topnav">
             <a class="active" href="Portal.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#contact">Contact</a>
+            <a href="contact.html">Contact</a>
             <input type="text" placeholder="Search..">
         </div>
 
@@ -116,7 +118,7 @@ img{
 /* Style the "active" element to highlight the current page */
 .topnav a.active {
   background-color: #ee9c58;
-  color: white;
+  color: black;
 }
 
 /* Style the search box inside the navigation bar */
