DGM World contact update

--- a/about.html
+++ b/about.html
@@ -173,8 +173,7 @@ img{
        <div id="box"></div>
        <p id="para">
         Sheet Music Academy came into existence out of a need for quality music education. The quality of teaching we provide has been in the forefront of our evolution over the years. The business journey of the Academy has had its ups and downs but at the very least, it has been an exciting journey for all stakeholders including the students of course. The academy is built on 4 main pillars, i.e. performance, knowledge, skill and qualifications. We ensure each student achieves his/her musical aspirations while building a solid foundation in the core musical concepts. <br />
-        <img src="images/Tutor.webp" width="800px" height="800px" style=" float: right; margin: 10 50px; border: 1px solid white; box-shadow: 0 0 10px white;">
-        
+       
         <p></p>
 
         Over the years we have collaborated with various prestigious institutions to provide high quality education to their students, which otherwise was hard to imagine. Indian Institute of Technology (IIT), Delhi has many students that studied with some of the top musicians at Bridge Music Academy over the past 2 years. A group of MusicallyFit professionals carrying the vision to raise godly musicians, who are going to take down territories for God's kingdom with their voices and skills. We are looking for all possible ways to depopulate the kingdom of darkness through <strong><i>MUSIC</i></strong> and give young christians musicians a genuine platform to showcase their God-given talents. <br/>
@@ -204,7 +203,6 @@ img{
       <div class="container">
         <h2>Jonah Doe</h2>
         <p class="title">CEO &amp; Founder</p>
-        <p>Da Great Monarch</p>
         <p>example@example.com</p>
         <p><button class="button">Contact</button></p>
       </div>
@@ -217,7 +215,18 @@ img{
       <div class="container">
         <h2>Mike Ross</h2>
         <p class="title">Art Director</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="images/mrs doe.webp" alt="Jane" style="width:80%; height: 80%;">
+      <div class="container">
+        <h2>Jane Doe</h2>
+        <p class="title">Music Director</p>
         <p>example@example.com</p>
         <p><button class="button">Contact</button></p>
       </div>
